# Finance-Tracker-App

./: .gitignore  AI-CODING-AGENT-CONTEXT-PROMPT.md  AI-CODING-AGENT-SYSTEM-PROMPT.md  ARCHITECTURE.md  BUSINESS-REQUIREMENTS.md  IMPLEMENTATION-PLAN.md  IMPLEMENTATION_SUMMARY.md  Makefile  README.md  TECHNICAL-REQUIREMENTS.md  TRACEABILITY-MATRIX.md  UI-UX-DESIGN-STANDARDS.md  UPDATED-ARCHITECTURE.md  docker-compose.yml
backend/: .env.example  Dockerfile  README.md  alembic.ini  pyproject.toml
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/routers/: auth.py  categories.py  dashboard.py  expenses.py  health.py  investments.py
backend/app/core/: config.py  errors.py  logging.py  passwords.py  rate_limit.py  security.py
backend/app/db/: session.py
backend/app/db/migrations/: env.py  script.py.mako
backend/app/db/migrations/versions/: 0001_initial_schema.py  0002_local_auth.py  (+1 more)
backend/app/models/: auth_session.py  base.py  category.py  expense.py  investment.py  user.py
backend/app/repositories/: category_repo.py  expense_repo.py  investment_repo.py
backend/app/schemas/: auth.py  category.py  common.py  dashboard.py  expense.py  investment.py
backend/app/services/: analytics_service.py  category_service.py  expense_service.py  investment_service.py  local_auth_service.py
backend/tests/: conftest.py
backend/tests/integration/: conftest.py  test_auth_api.py  test_categories_api.py  test_cross_user_isolation.py  test_dashboard_api.py  test_expenses_api.py  test_health.py  test_investments_api.py
backend/tests/unit/: test_analytics_service.py  test_config.py  test_expense_service.py  test_investment_service.py  test_passwords.py  test_rate_limit.py  test_security.py
(+132 files in other folders)
